# LPFilter

./: CMakeLists.txt  README.md
plugin/: CMakeLists.txt
plugin/include/IIRFilter/: PluginEditor.h  PluginProcessor.h
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
